--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
 	},
 	"homepage": "https://github.com/StelmakhM/phonebook-backend#readme",
 	"dependencies": {
+		"bcryptjs": "^2.4.3",
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
 		"http-errors": "^2.0.0",
 		"joi": "^17.8.3",
+		"jsonwebtoken": "^9.0.0",
 		"mongoose": "^6.10.0",
 		"morgan": "^1.10.0",
 		"nodemon": "^2.0.20"
